#
# k2hftfuse for file transaction by FUSE-based file system
#
# Copyright 2015 Yahoo Japan Corporation.
#
# k2hftfuse is file transaction system on FUSE file system with
# K2HASH and K2HASH TRANSACTION PLUGIN, CHMPX.
#
# For the full copyright and license information, please view
# the license file that was distributed with this source code.
#
# AUTHOR:   Takeshi Nakatani
# CREATE:   Tue Sep 1 2015
# REVISION:
#

AUTOMAKE_OPTIONS = foreign no-dependencies

man_MANS = k2hftfuse.1 k2hftfusesvr.1

EXTRA_DIST = $(man_MANS)

#
# VIM modelines
#
# vim:set ts=4 fenc=utf-8:
#
