#
# k2hftfuse for file transaction by FUSE-based file system
#
# Copyright 2015 Yahoo Japan Corporation.
#
# k2hftfuse is file transaction system on FUSE file system with
# K2HASH and K2HASH TRANSACTION PLUGIN, CHMPX.
#
# For the full copyright and license information, please view
# the license file that was distributed with this source code.
#
# AUTHOR:   Takeshi Nakatani
# CREATE:   Tue Sep 1 2015
# REVISION:
#

noinst_PROGRAMS = k2hftfusetest

k2hftfusetest_SOURCES = k2hftfusetest.cc
k2hftfusetest_LDADD = 

ACLOCAL_AMFLAGS = -I m4
AM_CFLAGS = 
AM_CPPFLAGS = 

TESTS = test.sh

EXTRA_DIST =	test.sh \
				k2hftfusesvr_test_trans_server.ini \
				k2hftfusesvr_test_trans_slave.ini \
				k2hftfuse_test_server.ini \
				k2hftfuse_test_slave.ini \
				k2hftfuse_test_trans_server.ini \
				k2hftfusesvr_test_trans_server.yaml \
				k2hftfusesvr_test_trans_slave.yaml \
				k2hftfuse_test_server.yaml \
				k2hftfuse_test_slave.yaml \
				k2hftfuse_test_trans_server.yaml \
				k2hftfusesvr_test_trans_server.json \
				k2hftfusesvr_test_trans_slave.json \
				k2hftfuse_test_server.json \
				k2hftfuse_test_slave.json \
				k2hftfuse_test_trans_server.json \
				test_json_string.data

#
# Local variables:
# tab-width: 4
# c-basic-offset: 4
# End:
# vim600: noexpandtab sw=4 ts=4 fdm=marker
# vim<600: noexpandtab sw=4 ts=4
#
